# customer-zerox

./: README.md  custom_api_example.py  pyproject.toml  setup.py
examples/: custom_api_example.py
py_zerox/: __init__.py
py_zerox/custom_zerox/: __init__.py
py_zerox/custom_zerox/core/: __init__.py  zerox.py
py_zerox/custom_zerox/models/: __init__.py  custom_api.py
