[tool.poetry]
name = "custom-zerox"
version = "0.0.8"
description = "Custom OCR library with support for custom API endpoints and vision models from all popular providers"
authors = ["Custom Zerox Team <custom@zerox.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "custom_zerox", from = "py_zerox" }]
repository = "https://github.com/your-username/custom-zerox.git"
documentation = "https://github.com/your-username/custom-zerox"
keywords = ["ocr", "document", "llm", "custom-api", "vision-models"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.0"
aiohttp = "^3.9.5"
pdf2image = "^1.17.0"
litellm = "^1.44.15"
aioshutil = "^1.5"
pypdf2 = "^3.0.1"

[tool.poetry.scripts]
pre-install = "py_zerox.scripts.pre_install:check_and_install"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"
black = "^24.4.2"
ruff = "^0.5.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
